--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -3,3 +3,62 @@
 .clear {
   clear: both;
 }
+
+.circle {
+    font-weight: bold;
+    font-style: italic;
+    position: relative;
+    border-radius: 100%;
+    background: #f84342;
+    border: 1px solid #F7F7F7;
+    width: 90px;
+    height: 90px;
+    margin: 10px 10px;
+    text-align: center;
+    color: #FFF;
+    font-size: 10px;
+    line-height: 14px;
+    cursor: pointer;
+    transform: rotate(11deg);
+    -ms-transform: rotate(11deg); /* IE 9 */
+    -webkit-transform: rotate(11deg); /* Opera, Chrome, and Safari */
+}
+
+.slogan {
+  font-family: "Palatino Linotype", Palatino, Palldio, "URW Palladio L", "Book Antiqua", Baskersville, "Bookman Old Style, "Bistream Charter", "Nimbus Roman No9 L", Garamoond, "Apple Garamond", "ITC Garamond Narrow", "New Century Schoolbook", Century Schookbook", "Century Schooolbook L", Georgia, serif;
+  font-style: italic;
+  padding-top: 26px;
+  font-size: 18px;
+}
+
+.links {
+  padding-top: 26px;
+}
+
+.links a {
+  color: black;
+  font-size: 25px;
+  border-bottoom: 1px solid red;
+  font-family: 'rubikblack', sans-serif;
+  font-weight: bold;
+}
+
+header {
+  border-top: 9px solid red;
+}
+
+hr {
+  clear:both;
+}
+
+h1 {
+  font-family: "rubikbold", sans-serif;
+  font-weight: bold;
+  font-size: 40px;
+  margin: 15px 10px;
+}
+
+h2 {
+  font-family: "rubikblack_italic";
+  margin: 5px 5px;
+}
