--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,17 +12,26 @@
   <body>
     <header class="row">
       <div class="col-3">
-        LOGO
+        <div class="circle">
+          <br />
+          BEARS
+          <br />
+          BEETS
+          <br />
+          BATTLESTAR GALLACTICA
+        </div>
       </div>
-      <div class="col-4">
+      <div class="col-4 slogan">
         For when you're feeling like you need a whole lot of paper
       </div>
-      <div class="col-5">
+      <div class="col-5 links">
         <%= link_to 'Contribute', '#' %>
         <%= link_to 'About', '#' %>
       </div>
     </header>
 
+    <hr />
+    
     <br class="clear" />
 
     <%= yield %>
