--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -62,3 +62,24 @@ h2 {
   font-family: "rubikblack_italic";
   margin: 5px 5px;
 }
+
+.next-quote {
+  color: red;
+  font-family: "rubikbold", sans-serif;
+  font-size: 20px;
+}
+.footer-blurb {
+  font-family: "Palatino Linotype", Palatino, Palldio, "URW Palladio L", "Book Antiqua", Baskersville, "Bookman Old Style, "Bistream Charter", "Nimbus Roman No9 L", Garamoond, "Apple Garamond", "ITC Garamond Narrow", "New Century Schoolbook", Century Schookbook", "Century Schooolbook L", Georgia, serif;
+  font-style: italic;
+  text-align: right;
+  font-size: 10px;
+}
+
+.logo:hover {
+  text-decoration: none;
+}
+
+.about {
+   font-family: "Palatino Linotype", Palatino, Palladio, "URW Palladio L", "Book Antiqua", Baskerville, "Bookman Old Style", "Bitstream Charter", "Nimbus Roman No9 L", Garamond, "Apple Garamond", "ITC Garamond Narrow", "New Century Schoolbook", "Century Schoolbook", "Century Schoolbook L", Georgia, serif;
+}
+
