--- a/app/views/quotes/index.html.erb
+++ b/app/views/quotes/index.html.erb
@@ -1,2 +1,12 @@
+<h2>
+  <span>Office Quote No. <%= @quote.id %></span>
+  Michael Scott needs <u>YOU</u> to give us more hilarious quotes!
+</h2>
+
 <h1><%= @quote.saying %></h1>
-<h2>- <%= @quote.author %></h2>
+<h2 class="float-right"> - <%= @quote.author %></h2>
+
+<br class="clear" />
+<br />
+<br />
+<br />
