--- a/app/views/quotes/about.html.erb
+++ b/app/views/quotes/about.html.erb
@@ -1,4 +1,4 @@
-<div class="col-10 offset-1">
+<div class="col-10 offset-1 about">
 <h1>About Website</h1>
 
 <p>
@@ -9,7 +9,7 @@
   I have just begun my journey to become a web devoloper and am loving it. I hope to have many accomplishments to put here one day.
 </p>
 <p>
-  If you want to learn how to start coding, start at <a target="_blank" href="https://online.bootcampspot.com"> and begin your journey</a>
+  If you want to learn how to start coding, start <a target="_blank" href="https://online.bootcampspot.com"> here and begin your journey</a>
 
 <div class="row">
   <div class="col-12 col-sm-4">
@@ -23,7 +23,14 @@
       Cole LeBoeuf is an employee at UPS currently but looking to learn some new skills and begin a new career in programming.
     </p>
   </div>
-  <br class="clear" />
-
 
 </div>
+
+<br class="clear" />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+
